[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lazy Morning DEMO.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Mode.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Mode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
color = Color( 0.956863, 0.956863, 0.976471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonControl" type="Control" parent="."]
margin_left = 18.0
margin_top = -9.0
margin_right = 58.0
margin_bottom = 31.0

[node name="DDA" type="Button" parent="ButtonControl"]
margin_top = 66.0
margin_right = 98.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
text = "DDA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bresenham" type="Button" parent="ButtonControl"]
margin_left = 114.0
margin_top = 65.0
margin_right = 197.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 3 )
text = "Bresenham"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 52.0
margin_top = 4.0
margin_right = 190.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "Draw Mode : ON"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonControl/DDA" to="." method="_on_DDA_pressed"]
[connection signal="pressed" from="ButtonControl/Bresenham" to="." method="_on_Bresenham_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
